--- a/www/package.json
+++ b/www/package.json
@@ -9,7 +9,8 @@
     "react-plotly.js": "^2.5.1",
     "react-table": "^7.7.0",
     "sql.js-httpvfs": "^0.8.8",
-    "stream": "^0.0.2"
+    "stream": "^0.0.2",
+    "styled-components": "^5.3.3"
   },
   "devDependencies": {
     "@types/jquery": "^3.5.6",
@@ -17,6 +18,7 @@
     "@types/react-dom": "^17.0.9",
     "@types/react-plotly.js": "^2.5.0",
     "@types/react-table": "^7.7.8",
+    "@types/styled-components": "^5.1.15",
     "http-server": "^14.0.0",
     "source-map-loader": "^3.0.0",
     "ts-loader": "^9.1.2",
