--- a/www/package.json
+++ b/www/package.json
@@ -3,6 +3,7 @@
     "assert": "^2.0.0",
     "buffer": "^6.0.3",
     "jquery": "^3.6.0",
+    "moment": "^2.29.1",
     "plotly.js": "^2.3.0",
     "process": "^0.11.10",
     "react-dom": "^17.0.2",
