--- a/www/package.json
+++ b/www/package.json
@@ -1,13 +1,16 @@
 {
   "dependencies": {
+    "@types/pako": "^1.0.2",
     "assert": "^2.0.0",
     "buffer": "^6.0.3",
     "jquery": "^3.6.0",
     "moment": "^2.29.1",
+    "pako": "^2.0.4",
     "plotly.js": "^2.3.0",
     "process": "^0.11.10",
     "react-dom": "^17.0.2",
     "react-plotly.js": "^2.5.1",
+    "react-router-dom": "^6.0.2",
     "react-table": "^7.7.0",
     "sql.js-httpvfs": "^0.8.8",
     "stream": "^0.0.2",
