--- a/www/package.json
+++ b/www/package.json
@@ -4,6 +4,7 @@
     "assert": "^2.0.0",
     "buffer": "^6.0.3",
     "jquery": "^3.6.0",
+    "lodash": "^4.17.21",
     "moment": "^2.29.1",
     "pako": "^2.0.4",
     "plotly.js": "^2.3.0",
@@ -18,6 +19,7 @@
   },
   "devDependencies": {
     "@types/jquery": "^3.5.6",
+    "@types/lodash": "^4.14.177",
     "@types/react": "^17.0.15",
     "@types/react-dom": "^17.0.9",
     "@types/react-plotly.js": "^2.5.0",
