--- a/www/package.json
+++ b/www/package.json
@@ -1,5 +1,9 @@
 {
   "dependencies": {
+    "@emotion/react": "^11.7.0",
+    "@emotion/styled": "^11.6.0",
+    "@material-ui/core": "^4.12.3",
+    "@mui/material": "^5.2.2",
     "@types/pako": "^1.0.2",
     "assert": "^2.0.0",
     "buffer": "^6.0.3",
