--- a/www/package.json
+++ b/www/package.json
@@ -19,7 +19,8 @@
     "react-table": "^7.7.0",
     "sql.js-httpvfs": "^0.8.8",
     "stream": "^0.0.2",
-    "styled-components": "^5.3.3"
+    "styled-components": "^5.3.3",
+    "use-persisted-state": "^0.3.3"
   },
   "devDependencies": {
     "@types/jquery": "^3.5.6",
@@ -29,6 +30,7 @@
     "@types/react-plotly.js": "^2.5.0",
     "@types/react-table": "^7.7.8",
     "@types/styled-components": "^5.1.15",
+    "@types/use-persisted-state": "^0.3.0",
     "http-server": "^14.0.0",
     "source-map-loader": "^3.0.0",
     "ts-loader": "^9.1.2",
