`disk_tree.sql`, factor cli

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,7 +25,7 @@ dev = [
 ]
 
 [project.scripts]
-disk-tree = "disk_tree.main:cli"
+disk-tree = "disk_tree.cli.main:cli"
 
 [tool.setuptools]
 package-dir = { "" = "src" }
