--- a/www/package.json
+++ b/www/package.json
@@ -1,44 +1,29 @@
 {
+  "name": "www",
+  "version": "0.1.0",
+  "private": true,
+  "scripts": {
+    "dev": "next dev --turbopack",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
+  },
   "dependencies": {
-    "@emotion/react": "^11.7.0",
-    "@emotion/styled": "^11.6.0",
-    "@material-ui/core": "^4.12.3",
-    "@mui/material": "^5.2.2",
-    "@types/pako": "^1.0.2",
-    "assert": "^2.0.0",
-    "buffer": "^6.0.3",
-    "jquery": "^3.6.0",
-    "lodash": "^4.17.21",
-    "moment": "^2.29.1",
-    "pako": "^2.0.4",
-    "plotly.js": "^2.3.0",
-    "process": "^0.11.10",
-    "react-dom": "^17.0.2",
-    "react-plotly.js": "^2.5.1",
-    "react-router-dom": "^6.0.2",
-    "react-table": "^7.7.0",
-    "sql.js-httpvfs": "^0.8.8",
-    "stream": "^0.0.2",
-    "styled-components": "^5.3.3",
-    "use-persisted-state": "^0.3.3"
+    "@tanstack/react-query": "^5.75.7",
+    "next": "15.3.2",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0"
   },
   "devDependencies": {
-    "@types/jquery": "^3.5.6",
-    "@types/lodash": "^4.14.177",
-    "@types/react": "^17.0.15",
-    "@types/react-dom": "^17.0.9",
-    "@types/react-plotly.js": "^2.5.0",
-    "@types/react-table": "^7.7.8",
-    "@types/styled-components": "^5.1.15",
-    "@types/use-persisted-state": "^0.3.0",
-    "http-server": "^14.0.0",
-    "source-map-loader": "^3.0.0",
-    "ts-loader": "^9.1.2",
-    "typescript": "^4.2.4",
-    "webpack": "^5.36.2",
-    "webpack-cli": "^4.7.0"
-  },
-  "browser": {
-    "buffer": false
+    "@eslint/eslintrc": "^3",
+    "@rdub/eslint-config": "^0.0.3",
+    "@tailwindcss/postcss": "^4",
+    "@types/node": "^20",
+    "@types/react": "^19",
+    "@types/react-dom": "^19",
+    "eslint": "^9",
+    "eslint-config-next": "15.3.2",
+    "tailwindcss": "^4",
+    "typescript": "^5"
   }
 }
