--- a/www/package.json
+++ b/www/package.json
@@ -10,19 +10,24 @@
   },
   "dependencies": {
     "@tanstack/react-query": "^5.75.7",
+    "better-sqlite3": "^11.10.0",
     "next": "15.3.2",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "sqlite": "^5.1.1",
+    "sqlite3": "^5.1.7"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@rdub/eslint-config": "^0.0.3",
     "@tailwindcss/postcss": "^4",
+    "@types/better-sqlite3": "^7.6.13",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.3.2",
+    "node-gyp": "^11.2.0",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
