--- a/www/package.json
+++ b/www/package.json
@@ -14,6 +14,7 @@
     "next": "15.3.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "sass": "^1.88.0",
     "sqlite": "^5.1.1",
     "sqlite3": "^5.1.7"
   },
