--- a/www/package.json
+++ b/www/package.json
@@ -9,12 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@rdub/base": "^0.8.0",
     "@tanstack/react-query": "^5.75.7",
     "better-sqlite3": "^11.10.0",
+    "hyparquet": "^1.13.1",
     "next": "15.3.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "sass": "^1.88.0",
+    "react-icons": "^5.5.0",
+    "react-plotly.js": "^2.6.0",
     "sqlite": "^5.1.1",
     "sqlite3": "^5.1.7"
   },
@@ -26,9 +29,11 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/react-plotly.js": "^2.6.3",
     "eslint": "^9",
     "eslint-config-next": "15.3.2",
     "node-gyp": "^11.2.0",
+    "sass": "^1.88.0",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
